feat: display record data on index.handlebars

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,7 @@
-<h2>This is Expense Tracker</h2>
+<ul>
+  {{#each records}}
+    <li>
+      {{this.name}}/{{this.date}}/{{this.amount}}
+    </li>
+  {{/each}}
+</ul>
