feat: add create record function

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,9 @@
 <ul>
   {{#each records}}
-    <li>
-      {{this.name}}/{{this.date}}/{{this.amount}}
-    </li>
+  <li>
+    {{this.name}}/{{this.date}}/{{this.amount}}
+  </li>
   {{/each}}
 </ul>
+
+<a href="./records/new">新增支出</a>
