--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,6 +2,7 @@
   {{#each records}}
   <li>
     {{this.name}}/{{this.date}}/{{this.amount}}
+    <a href="./records/{{ this._id }}">detail</a>
   </li>
   {{/each}}
 </ul>
