--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,13 +1,23 @@
-<ul>
+<ul class="list-group">
   {{#each records}}
-  <li>
-    {{this.name}}/{{this.date}}/{{this.amount}}
-    <a href="./records/{{ this._id }}/edit">編輯</a>
-    <form action="/records/{{ this._id }}?_method=DELETE" method="POST" style="display: inline;">
-      <button type="submit">刪除</button>
-    </form>
+  <li class="list-group-item list-group-item-light">
+    <div class="row">
+      <div class="col-auto me-auto">
+        <h4 style="display: inline; vertical-align: middle;">
+          {{this.name}} | {{this.date}} | {{this.amount}}
+        </h4>
+      </div>
+      <div class="col-auto">
+        <a class="btn btn-secondary" href="./records/{{ this._id }}/edit">編輯</a>
+        <form action="/records/{{ this._id }}?_method=DELETE" method="POST" style="display: inline;">
+          <button class="btn btn-danger" type="submit">刪除</button>
+        </form>
+      </div>
+    </div>
   </li>
   {{/each}}
 </ul>
 
-<a href="./records/new">新增支出</a>
+<div class="d-flex justify-content-center mt-3">
+  <a class="btn btn-warning" href="/records/new">新增支出</a>
+</div>
