--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -1,6 +1,8 @@
-<form action="/records" method="POST">
-  <input type="text" placeholder="name" name="name">
-  <input type="date" placeholder="date" name="date">
-  <input type="number" placeholder="number" name="amount">
-  <button type="submit">新增支出</button>
+<form action="/records" method="POST" style="display: inline;">
+  <div class="input-group">
+    <input class="form-control" type="text" placeholder="name" name="name">
+    <input class="form-control" type="date" placeholder="date" name="date">
+    <input class="form-control" type="number" placeholder="number" name="amount">
+    <button class="btn btn-success" type="submit">新增支出</button>
+  </div>
 </form>
