--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,23 @@
-<h2>Login</h2>
+<div class="row mt-5">
+  <div class="col-md-6 m-auto">
+    <div class="card card-body">
+      <h1 class="text-center mt-3">登入</h1>
+      <form action="/users/login" method="POST">
+        <div class="mb-3">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" class="form-control" placeholder="Enter Email">
+        </div>
+        <div class="mb-3">
+          <label for="password">密碼</label>
+          <input type="password" id="password" name="password" class="form-control" placeholder="Enter Password">
+        </div>
+        <div class="d-flex justify-content-center mt-3">
+          <button type="submit" class="btn btn-primary btn-block">登入</button>
+        </div>
+      </form>
+      <p class="lead mt-4">
+        沒有帳號？ <a href="/users/register">請註冊</a>
+      </p>
+    </div>
+  </div>
+</div>
