--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,8 +11,8 @@
           <label for="password">密碼</label>
           <input type="password" id="password" name="password" class="form-control" placeholder="Enter Password">
         </div>
-        <div class="d-flex justify-content-center mt-3">
-          <button type="submit" class="btn btn-primary btn-block">登入</button>
+        <div class="d-flex justify-content-center">
+          <button type="submit" class="btn btn-warning btn-block form-control">登入</button>
         </div>
       </form>
       <p class="lead mt-4">
