--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,1 +1,34 @@
-<h2>Register</h2>
+<div class="row mt-5">
+  <div class="col-md-6 m-auto">
+    <div class="card card-body">
+      <h1 class="text-center mt-3">註冊</h1>
+      <form action="/users/register" method="POST">
+        <div class="mb-3">
+          <label for="name">名字</label>
+          <input type="text" name="name" id="name" class="form-control" placeholder="Enter Name" value="{{ name }}">
+        </div>
+        <div class="mb-3">
+          <label for="email">Email</label>
+          <input type="email" name="email" id="email" class="form-control" placeholder="Enter Email"
+            value="{{ email }}">
+        </div>
+        <div class="mb-3">
+          <label for="password">密碼</label>
+          <input type="password" name="password" id="password" class="form-control" placeholder="Enter Password"
+            value="{{ password }}">
+        </div>
+        <div class="mb-3">
+          <label for="confirmPassword">確認密碼</label>
+          <input type="password" name="confirmPassword" id="confirmPassword" class="form-control"
+            placeholder="Confirm Password" value="{{ confirmPassword }}">
+        </div>
+        <div class="d-flex justify-content-center">
+          <button type="submit" class="btn btn-warning btn-block form-control">註冊</button>
+        </div>
+      </form>
+      <p class="lead mt-4">
+        已有帳號？ <a href="/users/login">請登入</a>
+      </p>
+    </div>
+  </div>
+</div>
