--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,9 @@
     <nav class="navbar navbar-light justify-content-between" style="padding: 8px 16px;
       background-color: #ECEBEB;">
       <a class="navbar-brand" href="/">家庭記帳本</a>
-      <a class="btn btn-outline-dark" style="color: #e95420;" href="/users/logout">登出</a>
+      {{#if isAuthenticated}}
+        <a class="btn btn-outline-dark" style="color: #e95420;" href="/users/logout">登出</a>
+      {{/if}}
     </nav>
   </header>
   <main>
