--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,6 +11,10 @@
   </ul>
 </div>
 
+<div class="d-flex justify-content-center m-3">
+  總金額：{{totalAmount}}
+</div>
+
 <ul class="list-group">
   {{#each records}}
   <li class="list-group-item list-group-item-light">
