--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,8 +11,9 @@
   </ul>
 </div>
 
-<div class="d-flex justify-content-center m-3">
-  總金額：{{totalAmount}}
+<div class="d-flex justify-content-between m-3">
+  <div class="total-amount-title">總金額:</div>
+  <div class="total-amount">{{ totalAmount }}</div>
 </div>
 
 <ul class="list-group">
