--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,13 +20,21 @@
   {{#each records}}
   <li class="list-group-item list-group-item-light">
     <div class="row">
-      <div class="col-auto me-auto">
-        <h4 style="display: inline; vertical-align: middle;">
-          {{this.name}} | {{this.date}} | {{this.amount}}
-        </h4>
+      <div class="col-auto me-auto d-flex">
+        <div class="d-flex align-items-center">
+          <i class="{{ this.icon }}">i</i>
+          <div class="d-flex row">
+            <span class="ms-3">{{ this.name }}</span>
+            <span class="ms-3">{{ this.date }}</span>
+          </div>
+        </div>
+        <div class="d-flex align-items-center">
+          
+        </div>
       </div>
       <div class="col-auto">
-        <a class="btn btn-secondary" href="./records/{{ this._id }}/edit">編輯</a>
+        <span class="me-3">{{ this.amount }}</span>
+        <a class="btn btn-secondary" href="./records/{{ this._id }}/edit">修改</a>
         <form action="/records/{{ this._id }}?_method=DELETE" method="POST" style="display: inline;">
           <button class="btn btn-danger" type="submit">刪除</button>
         </form>
